@@ -192,3 +192,12 @@ gboolean is_audio_cd (const char *device)
   return status == CDS_AUDIO;
 }
 
+/* Pass NULL to use g_free */
+void
+g_list_deep_free (GList *l, GFunc free_func)
+{
+  g_return_if_fail (l != NULL);
+  if (free_func == NULL) free_func = (GFunc)g_free;
+  g_list_foreach (l, free_func, NULL);
+  g_list_free (l);
+}
