@@ -35,4 +35,6 @@ gboolean tray_is_opened (const char *device);
 
 gboolean is_audio_cd (const char *device);
 
+void g_list_deep_free (GList *l, GFunc free_func);
+
 #endif /* SJ_UTIL_H */
