@@ -1,3 +1,12 @@
+2003-10-01  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-util.[ch]:
+	Added g_list_deep_free()
+
+	* src/sj-main.c:
+	* src/sj-structures.c:
+	Use deep_free
+
 2003-09-30  Bastien Nocera  <hadess@hadess.net>
 
 	* src/sj-extractor.c: (eos_cb), (tick_timeout_cb),
